Fixes #10359: \"Delete <component> #1\" button in directive form's text is not centered

--- a/rudder-web/src/main/webapp/style/rudder/rudder-menu.css
+++ b/rudder-web/src/main/webapp/style/rudder/rudder-menu.css
@@ -1050,7 +1050,8 @@ a.sidebar-toggle{
   margin-left: 10px;
 }
 .directiveDeleteGroup .btn-danger{
-	padding-right:28px;
+  padding-left:  20px;
+  padding-right: 20px;
 }
 .fixed-footer.directive-footer .btn,.fixed-footer.rule-footer .btn{
 	min-width:80px;
